# hatch-cli-app

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  cookiecutter.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0-feature-request.md  1-bug_report.md  config.yml
.github/workflows/: build.yml
hooks/: post_gen_project.py
{{ cookiecutter.__project_slug }}/: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  settings.{{ cookiecutter.cli_command_name }}.toml.sample
{{ cookiecutter.__project_slug }}/.github/: maintain-labels.yml  pull-request-labeler.yaml  release-drafter.yml
{{ cookiecutter.__project_slug }}/.github/ISSUE_TEMPLATE/: 0-feature-request.md  1-bug_report.md  config.yml
{{ cookiecutter.__project_slug }}/.github/workflows/: build-documentation.yml  build.yml  maintain-labels.yml  pull-request-labeler.yml  release-drafter.yml
{{ cookiecutter.__project_slug }}/docs/: contributing.md  features.md  github_workflow.md  index.md  requirements.txt
{{ cookiecutter.__project_slug }}/docs/snippets/: links.txt
{{ cookiecutter.__project_slug }}/notebooks/: template.ipynb
{{ cookiecutter.__project_slug }}/src/{{cookiecutter.pkg_name}}/: __init__.py  config.py
{{ cookiecutter.__project_slug }}/src/{{cookiecutter.pkg_name}}/cli/: config.py  factorial.py  fetch.py  main.py  prime.py
{{ cookiecutter.__project_slug }}/src/{{cookiecutter.pkg_name}}/defaults/: settings.{{ cookiecutter.cli_command_name }}.toml
{{ cookiecutter.__project_slug }}/tests/: __init__.py  conftest.py  test_cli.py  test_cli_config.py
